--- a/package.json
+++ b/package.json
@@ -15,17 +15,23 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "animate.css": "^4.1.1",
     "axios": "^1.1.2",
-    "flickity": "^3.0.0",
+    "bootstrap": "^5.2.2",
     "node-sass": "^7.0.3",
     "perfect-scrollbar": "^1.5.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
+    "react-transition-group": "^4.4.5",
+    "sass": "^1.55.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -55,7 +61,7 @@
     ]
   },
   "devDependencies": {
-    "@types/flickity": "^2.2.7",
-    "@types/jquery": "^3.5.14"
+    "@types/jquery": "^3.5.14",
+    "@types/react-slick": "^0.23.10"
   }
 }
