--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
+    "framer-motion": "^7.6.1",
     "node-sass": "^7.0.3",
     "perfect-scrollbar": "^1.5.5",
     "react": "^18.2.0",
@@ -31,6 +32,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.55.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.8.4",
@@ -66,6 +68,9 @@
   "devDependencies": {
     "@types/jquery": "^3.5.14",
     "@types/react-slick": "^0.23.10",
-    "electron": "^21.2.0"
+    "autoprefixer": "^10.4.12",
+    "electron": "^21.2.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
